--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inconsolata:wght@200..900&display=swap"
       rel="stylesheet"
     />
-
+    <style>
+      html, body {
+        overflow-x: hidden;
+      }
+    </style>
+    
     <title>Disaster Sentinal</title>
   </head>
   <body>
