--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/components/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,6 +19,7 @@
       rel="stylesheet"
       type="text/css"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,19 +28,16 @@
     />
     <style>
       html, body {
-        margin: 0;
-        padding: 0;
+        overflow-x: hidden;
         width: 100%;
         height: 100%;
-        overflow-x: hidden;
-        overflow-y: auto;
-        position: fixed; /* Prevents elastic scr  olling */
-        -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+        position: fixed;
+        overscroll-behavior-y: contain;
       }
       #root {
         width: 100%;
         height: 100%;
-        overflow-y: auto;
+        overflow: auto;
         -webkit-overflow-scrolling: touch;
       }
     </style>
