--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <style>
       html, body {
         overflow-x: hidden;
+        margin: 0;
         width: 100%;
         height: 100%;
-        position: fixed;
+        /* position: fixed; */
         overscroll-behavior-y: contain;
       }
-      #root {
+      #root { 
         width: 100%;
         height: 100%;
         overflow: auto;
